--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Coding Assignment 1</title>
-	<link rel="stylesheet" href="./module2.css">
+	<link rel="stylesheet" href="./css/module2.css">
 </head>
 <body>
 	<h1>Our Menu</h1>
